# madhav2021dome_domeros

./: .gitignore  README.md
arduino_commutation_dcmotor/: arduino_commutation_dcmotor.ino
daq_interface/: CMakeLists.txt  package.xml
daq_interface/action/: PulseDigital.action
daq_interface/msg/: DaqEvent.msg
daq_interface/src/: .talker.cpp.swo  daq_interface.cpp  daqapi.cpp  daqapi.h  ni_tio_defs.h
daq_interface/srv/: ReadAnalog.srv  ReadDigital.srv  ReadEncoder.srv  WriteAnalog.srv  WriteDigital.srv
dome/: CMakeLists.txt  package.xml
dome/config/: all_cues.yaml  dots.yaml
dome/launch/: camera.launch  camera_viewer.launch  daq_interface.launch  dome.launch  encoder.launch  experiment.launch  experiment_no_camera.launch  gui.launch  peripherals.launch  pointgrey_camera.launch  record_all_except_camera.launch  record_camera.launch  record_camera_throttle.launch  tracking.launch  visual.launch  visual_param_test.launch
dome/src/Experiment/: .Experiment.cpp.swo  EncoderPublisher.cpp  EncoderTester.cpp  FeedServer.cpp  SyncSender.cpp  ZListener.cpp  active_commutation.py  commutation.py  experiment_controller.py  joystick_publisher.py
dome/src/VisualScene/: DomeShape.cpp  DomeShape.h  DomeShapeLibrary.cpp  DomeShapeLibrary.h  Polygon.cpp  Polygon.h  Shape.h  VisualScene.cpp  VisualScene.h  helper.cpp  helper.h  mirrorProj.vert  textfile.cpp
dome/src/VisualScene/.svn/: all-wcprops  entries
dome/src/VisualScene/.svn/text-base/: DomeShape.cpp.svn-base  DomeShape.h.svn-base  Dot.cpp.svn-base  Dot.h.svn-base  Makefile.svn-base  Polygon.cpp.svn-base  Polygon.h.svn-base  helper.h.svn-base  mirrorProj.vert.svn-base  misc.cpp.svn-base  opticFlow.cpp.svn-base  textfile.h.svn-base
dome_common_msgs/: CMakeLists.txt  package.xml
dome_common_msgs/action/: DoExperiment.action
dome_common_msgs/msg/: DomeObj.msg  DomeVisible.msg  Drift.msg  Epoch.msg  EpochProgress.msg  EstimatedGain.msg  ExperimentStatus.msg  SpatialFiringRate.msg  Spike.msg  Spikes.msg  TTData.msg  TTFiringRate.msg  WallObj.msg
dome_common_msgs/srv/: Feed.srv  WhatsInDome.srv
pointgrey_camera_driver/pointgrey_camera_driver/cfg/: PointGrey.cfg
pointgrey_camera_driver/pointgrey_camera_driver/launch/: camera.launch
rqt_dome_interface/: CMakeLists.txt  package.xml  plugin.xml  setup.py
rqt_dome_interface/scripts/: rqt_dome_interface
rqt_dome_interface/src/rqt_dome_interface/: dome_interface_dashboard.py  rqt_dome_interface.ui
scripts/: runDomeExperiment.sh  runDomeTracking.sh
